# indirect-gwas

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: python-package.yml  release.yml  tests.yml
indirect_GWAS/: __init__.py  cli.py  gwas.py  io.py
indirect_GWAS/test/: test_gwas.py  test_indirect_regression_general.py  test_io.py  utils.py
indirect_gwas/: __init__.py  cli.py  gwas.py  igwas.py  io.py
indirect_gwas/src/: igwas.cpp  igwas.hpp  io.cpp  io.hpp  utils.cpp  utils.hpp  wrapper.cpp
indirect_gwas/test/: test_cpp.py  test_gwas.py  test_indirect_regression_general.py  test_io.py  test_pvalues.py  utils.py
python/igwas/: igwas.py  test_igwas.py
src/: cli.rs  lib.rs  main.rs  python.rs  util.rs
src/igwas/: mod.rs  running.rs
src/io/: error.rs  gwas.rs  matrix.rs  mod.rs
src/stats/: mod.rs  running.rs  sumstats.rs
tests/: integration_test.rs  utils.rs
