[package]
name = "igwas_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
env_logger = "0.10.1"
log = "0.4.20"
nalgebra = "0.32.3"
rand = "0.8.5"
rayon = "1.8.0"
serde = "1.0.192"
statrs = "0.16.0"

