[package]
name = "igwas"
version = "1.0.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
env_logger = "0.10.1"
log = "0.4.20"
nalgebra = { version = "0.32.3", features = ["rayon"] }
statrs = "0.16.0"
clap = { version = "4.4.10", features = ["derive"] }
anyhow = "1.0.75"
humantime = "2.1.0"
rayon = "1.8.0"
csv-sniffer = "0.3.1"
crossbeam-channel = "0.5.11"
zstd = "0.13.0"


[dev-dependencies]
assert_cmd = "2.0.12"
rayon = "1.8.0"
tempfile = "3.8.1"
serde = { version = "1.0.193", features = ["derive"] }
nalgebra = { version = "0.32.3", features = ["rand", "rayon"] }
