[project]
name = "igwas"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "zietzm", email = "michael.zietz@gmail.com" }
]
dependencies = [
    "pandas>=2.2.2",
    "numpy>=2.1.0",
    "zstandard>=0.23.0",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["maturin>=1.2,<2.0"]
build-backend = "maturin"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.3.2",
    "ruff>=0.6.2",
]

[tool.maturin]
python-source = "python"
module-name = "igwas._lowlevel"
features = ["pyo3/extension-module"]

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.2",
    "pytest>=8.3.2",
]
